<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<?ignore
SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
SPDX-License-Identifier: Apache-2.0

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
?>

<package format="3">
  <name>isaac_ros_deploy_ros2_control</name>
  <version>4.5.0</version>
  <description>ROS 2 control wrappers for isaac_deploy_core inference and safety controllers</description>
  <maintainer email="isaac-ros-maintainers@nvidia.com">Isaac ROS Maintainers</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- isaac_deploy libraries -->
  <depend>python3-torch-pip-shim</depend>
  <build_depend>cuda-toolkit</build_depend>
  <depend>isaac_deploy_core</depend>
  <depend>isaac_ros_deploy_converters</depend>

  <!-- Core ROS2 Control -->
  <depend>controller_manager_msgs</depend>
  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>realtime_tools</depend>

  <!-- ROS2 Messages -->
  <depend>std_msgs</depend>
  <depend>isaac_ros_deploy_interfaces</depend>

  <!-- Third-party -->
  <depend>yaml-cpp</depend>
  <depend>sensor_msgs</depend>
  <depend>isaac_ros_inverse_dynamics</depend>

  <!-- Testing -->
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>mujoco_ros2_control_msgs</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <controller_interface plugin="${prefix}/isaac_ros_deploy_ros2_control_controllers.xml"/>
  </export>
</package>
