<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>isaac_ros_inverse_dynamics</name>
  <version>4.5.0</version>
  <description>
    Pinocchio-backed inverse dynamics solver shared across controllers
    (e.g. the bimanual IK and safety controllers).
  </description>
  <maintainer email="dtzoumanikas@nvidia.com">Dimos Tzoumanikas</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>pinocchio</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
